# s3-bucket-perma-link

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release-please.yaml
src/: config.rs  error.rs  lib.rs  main.rs  server.rs
src/data/: bucket.rs  mod.rs
src/routes/: download.rs  mod.rs
