[package]
name = "s3_bucket_perma_link"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "s3_bucket_perma_link"

[dependencies]
getset = "0.1.2"
derive-new = "0.6.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = { version = "1.0.79", features = ["backtrace"] }
thiserror = "1.0"
backtrace = "0.3.69"
actix-web = "4.4.1"
tracing-actix-web = "0.7.9"
config = "0.13.4"
serde = "1.0.195"
serde_json = "1.0.111"
minio-rsc = "0.2.0"
sentry = { version = "0.32.1", features = ["anyhow", "debug-images", "backtrace"] }
secrecy = { version = "0.8.0", features = ["serde"] }
time = "0.3.31"

[profile.release]
lto = true
codegen-units = 1
debug = true